--- a/source/css/main.css
+++ b/source/css/main.css
@@ -106,8 +106,8 @@ header {
     align-items: center;
     transition: 0.6s ease;
     box-sizing: border-box;
+
     z-index: 1000;
-    background-color: transparent;
     /* width: 100%;
     box-sizing: border-box;
    height: 100px;
@@ -149,9 +149,9 @@ header a:hover {
     border-radius: 10px;
 }
 
-header.stick {
+/*header.stick {
     background-color: var(--primary);
-}
+}*/
 
 header.stick ul li a {
     color: var(--secondary);
@@ -164,6 +164,13 @@ header.stick ul li a:hover {
     transition: 0.6s ease;
 }
 
+.header {
+    background-color: transparent;
+}
+
+.stick {
+    background-color: var(--primary);
+}
 
 #menu {
     display: flex;
@@ -289,7 +296,7 @@ header.stick ul li a:hover {
     align-items: center;
     justify-content: center;
     background: transparent;
-    border-radius: 16px;
+    border-radius: 1.5rem;
     box-shadow: 0 4px 30px var(--bg-alpha);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
@@ -328,10 +335,12 @@ header.stick ul li a:hover {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: 15vw;
-    padding: .4rem;
-    gap: .4rem;
+    gap: 1.5rem;
     background-color: var(--bg-secondary);
-    /*   flex-wrap: wrap;
+    padding: 1.5rem 15vw 1.5rem 15vw;
+    margin: auto;
+    /*  ;
+      flex-wrap: wrap;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 5vw);
     grid-gap: 15px;
@@ -355,6 +364,11 @@ header.stick ul li a:hover {
 
 .instalations-itens {
     position: relative;
+    box-shadow: 0 4px 30px var(--secondary);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border-radius: 1.2rem;
+    border: 1px solid rgba(247, 255, 247, 0.3);
 
 }
 
@@ -362,6 +376,7 @@ header.stick ul li a:hover {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 1.2rem;
     /*   object-fit: cover;
     border-radius: 15px;
     transition: all 0.3s;
@@ -434,15 +449,16 @@ header.stick ul li a:hover {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     margin-top: 1.5rem;
 }
 
 .address {
     box-sizing: border-box;
-    flex: 1;
     padding: 3rem;
     line-height: 2rem;
+    flex: 1;
 
 }
 
@@ -622,9 +638,14 @@ header.stick ul li a:hover {
     }
 
     .installations {
-        display: grid;
+
         grid-template-columns: repeat(1, 1fr);
         grid-auto-rows: 50vh;
+        padding: 1rem;
+    }
+
+    .iframe {
+        min-width: 100vw;
     }
 
     .h-2 {
@@ -634,4 +655,5 @@ header.stick ul li a:hover {
     .w-2 {
         grid-column: span 1;
     }
+
 }
