--- a/source/css/main.css
+++ b/source/css/main.css
@@ -189,7 +189,9 @@ header.stick ul li a:hover {
 
 .main {
     position: relative;
-    background: linear-gradient(#2e8b5669, #224e4383), url("/assets/images/dogsBanco.jpeg") no-repeat;
+    background-image: url("/assets/images/dogsBanco.jpeg");
+    background-color: linear-gradient(#2e8b5669, #224e4383);
+    background-repeat: no-repeat;
     height: 100vh;
     width: 100%;
     display: flex;
