--- a/source/css/main.css
+++ b/source/css/main.css
@@ -193,8 +193,9 @@ header.stick ul li a:hover {
 .main {
     position: relative;
     /* background: linear-gradient(rgba(46, 139, 86, 0.5), rgba(34, 78, 67, 0.5));*/
-    background: linear-gradient(to bottom, rgba(46, 139, 86, .8),
-            rgba(34, 78, 67, .5)),
+    background: linear-gradient(to bottom,
+            rgba(34, 78, 67, .85)),
+        rgba(46, 139, 86, .65),
         url("../../assets/images/dogsBanco.jpeg");
     height: 100vh;
     width: 100%;
