--- a/source/css/main.css
+++ b/source/css/main.css
@@ -195,8 +195,8 @@ header.stick ul li a:hover {
     /* background: linear-gradient(rgba(46, 139, 86, 0.5), rgba(34, 78, 67, 0.5));*/
     background-color: var(--secondary);
     background: linear-gradient(to bottom,
-            rgba(34, 78, 67, .8)),
-        rgba(46, 139, 86, .6),
+            rgba(34, 78, 67, 0.9)),
+        rgba(46, 139, 86, 0.7),
         url("../../assets/images/dogsBanco.jpeg");
     height: 100vh;
     width: 100%;
