--- a/source/css/main.css
+++ b/source/css/main.css
@@ -193,9 +193,7 @@ header.stick ul li a:hover {
 .main {
     position: relative;
     /* background: linear-gradient(rgba(46, 139, 86, 0.5), rgba(34, 78, 67, 0.5));*/
-    background: linear-gradient(to bottom,
-            rgba(34, 78, 67, .9)),
-        rgba(46, 139, 86, .7),
+    background: linear-gradient(to bottom, rgba(34, 78, 67, .9), rgba(46, 139, 86, .7)),
         url("../../assets/images/dogsBanco.jpeg");
     height: 100vh;
     width: 100%;
