--- a/source/css/main.css
+++ b/source/css/main.css
@@ -623,12 +623,16 @@ header.stick ul li a:hover {
 
     .services-cards {
         display: grid;
-        min-width: 120px;
-        max-width: 90vw;
-        margin-right: 0;
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        min-width: 150px;
+        max-width: 100vw;
         margin: auto;
         padding: .5rem;
+        gap: 1.5rem;
     }
+
+
+
 
     .btn-agendar {
         width: 100%;
