--- a/source/css/main.css
+++ b/source/css/main.css
@@ -102,8 +102,9 @@ p {
     font-size: .75rem;
     letter-spacing: .5rem;
     color: var(--fonts-secondary);
-    border-radius: 0.8rem;
+    border-radius: 0.5rem;
     margin-top: 1.5rem;
+    float: right;
     cursor: pointer;
     transition: 1s ease-in-out;
 }
@@ -204,6 +205,7 @@ header.stick ul li a:hover {
     border-radius: 20px;
     width: 40%;
     backdrop-filter: blur(5px);
+
 }
 
 .main-info>p {
@@ -357,9 +359,6 @@ header.stick ul li a:hover {
     border-radius: 1.2rem;
 }
 
-.instalations-img:hover {
-    filter: grayscale(0);
-}
 
 .h-1 {
     grid-row: span 1;
@@ -560,16 +559,15 @@ header.stick ul li a:hover {
     }
 
     .message {
-
         margin-left: .5vw;
         margin-right: .5vw;
         box-sizing: border-box;
     }
 
     .installations {
-
-        grid-template-columns: repeat(1, 1fr);
-        grid-auto-rows: 50vh;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+        grid-auto-rows: 150px;
         padding: 1rem;
     }
 
@@ -583,6 +581,11 @@ header.stick ul li a:hover {
 
     .w-2 {
         grid-column: span 1;
+    }
+
+    .wh {
+        grid-row: span 2;
+        grid-column: span 2;
     }
 
     .address {
