--- a/source/css/main.css
+++ b/source/css/main.css
@@ -48,7 +48,7 @@ h2 {
     font-size: 2.375rem;
     line-height: 120%;
     letter-spacing: 0.04em;
-    font-weight: 400;
+    font-weight: 600;
     font-family: 'Montserrat', sans-serif;
     color: var(--secondary);
     margin-bottom: 1rem;
@@ -126,6 +126,10 @@ header {
     transition: 0.6s ease;
     box-sizing: border-box;
     z-index: 1000;
+    background-image: url('/assets/images/cooperdog-branco.png');
+    background-position: left center;
+    background-size: 120px 120px;
+    background-repeat: no-repeat;
 }
 
 header ul {
@@ -171,6 +175,20 @@ header.stick ul li a:hover {
 
 .stick {
     background-color: var(--primary);
+    background-image: url('/assets/images/cooperdog.png');
+    background-position: left center;
+    background-size: 120px 120px;
+    background-repeat: no-repeat;
+    -webkit-box-shadow: 0px 9px 10px 2px rgba(62, 122, 107, 0.3);
+    box-shadow: 0px 9px 10px 2px rgba(62, 122, 107, 0.3);
+}
+
+.logo {
+
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 120px;
+    height: 120px;
 }
 
 #menu {
