--- a/source/css/main.css
+++ b/source/css/main.css
@@ -27,10 +27,7 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    background-color: #2e8b562d;
-    border-radius: 10px;
-}
+
 
 body {
     font-family: 'Montserrat', sans-serif;
@@ -102,16 +99,16 @@ p {
     font-size: .75rem;
     letter-spacing: .5rem;
     color: var(--fonts-secondary);
-    border-radius: 0.5rem;
+    border-radius: 1rem;
     margin-top: 1.5rem;
     float: right;
     cursor: pointer;
-    transition: 1s ease-in-out;
+    transition: 0.6s ease-in-out;
 }
 
 
 .btn-agendar:hover {
-    transition: 1s ease-in-out;
+    transition: 0.6s ease-in-out;
     background-color: transparent;
 }
 
@@ -150,23 +147,25 @@ header ul li a {
     text-decoration: none;
     color: var(--primary);
     letter-spacing: 2px;
-    transition: 0.6s;
+    transition: 0.6s ease-in-out;
     border-radius: 10px;
 }
 
 header a:hover {
     background-color: var(--btn-primary);
     border-radius: 10px;
+    transition: 0.6s ease-in-out;
 }
 
 header.stick ul li a {
     color: var(--secondary);
     border-radius: 10px;
+    transition: 0.6s ease-in-out;
 }
 
 header.stick ul li a:hover {
     color: var(--fonts-secondary);
-    transition: 0.6s ease;
+    transition: 0.6s ease-in-out;
 }
 
 .header {
@@ -223,6 +222,7 @@ header.stick ul li a:hover {
     border-radius: 20px;
     width: 40%;
     backdrop-filter: blur(5px);
+    box-shadow: 0px 10px 10px -3px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -301,7 +301,6 @@ header.stick ul li a:hover {
 }
 
 .services-cards-card {
-    border-radius: 20px;
     height: 150px;
     width: 150px;
     color: var(--secondary);
@@ -315,7 +314,17 @@ header.stick ul li a:hover {
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(247, 255, 247, 0.3);
+    transition: 0.6s ease-in-out;
 }
+
+.services-cards-card:hover {
+    transition: 0.6s ease-in-out;
+    background-color: var(--bg-primary);
+    cursor: pointer;
+
+
+}
+
 
 .services-cards-details {
     display: flex;
@@ -419,6 +428,15 @@ header.stick ul li a:hover {
 .iframe {
     flex: 2;
     height: 80vh;
+}
+
+.line {
+    border-top: 1px solid var(--bg-secondary);
+    margin-top: 1rem;
+}
+
+.social-midias {
+    margin-top: 1rem;
 }
 
 @media (max-width: 600px) {
