--- a/source/css/main.css
+++ b/source/css/main.css
@@ -34,6 +34,7 @@ body {
     background-color: var(--primary);
 }
 
+
 h1 {
     font-size: 2.625rem;
     line-height: 3.5rem;
@@ -578,8 +579,8 @@ header.stick ul li a:hover {
 
     .services-cards {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-        min-width: 150px;
+        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+        min-width: 100px;
         max-width: 100vw;
         margin: auto;
         padding: .5rem;
@@ -629,4 +630,49 @@ header.stick ul li a:hover {
 
     }
 
+}
+
+.color-1 {
+    color: #3E4D7A;
+}
+
+.color-2 {
+    background-color: #F7F0FA;
+    color: #3E4D7A;
+    margin: 0;
+    padding: 1rem;
+}
+
+.color-3 {
+    background-color: #FFD6E6;
+}
+
+.color-4 {
+    background-color: #C3D8EA;
+}
+
+.color-5 {
+    background-color: #F7FFF7;
+}
+
+.color-6 {
+    background-color: #DBC5E7;
+}
+
+.color-7 {
+    background-color: #FDF9D8;
+}
+
+.color-8 {
+    background-color: #B3E5CB;
+}
+
+.color-9 {
+    background-color: #EDE2F3;
+}
+
+.color-10 {
+    background-color: #F0F5FA;
+    margin: 0;
+    padding: 1rem;
 }
