--- a/source/css/main.css
+++ b/source/css/main.css
@@ -373,7 +373,7 @@ header.stick ul li a:hover {
 
 .instalations-itens {
     position: relative;
-    box-shadow: 0 4px 30px var(--secondary);
+    box-shadow: 0 4px 30px var(--bg-alpha);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border-radius: 1.2rem;
