--- a/source/css/estiloBoot.css
+++ b/source/css/estiloBoot.css
@@ -1,10 +1,502 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@100;200;300;400;600;800&family=Poppins:wght@100;300;400&display=swap');
+
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
 }
 
-.color-c {
-    background-color: teal;
+:root {
+    --primary: #F7FFF7;
+    --secondary: #00AA88;
+    --tertiary: #606C91;
+
+    --bg-primary: #E7EEEC;
+    --bg-secondary: #C9E3CA;
+    --bg-alpha: rgba(34, 68, 59, 0.3);
+
+    --fonts-primary: #1F6B74;
+    --fonts-secondary: var(--primary);
+    --h-color: var(--secondary);
+    --btn-primary: var(--secondary);
+    --btn-secondary: var(--primary);
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    color: var(--fonts-primary);
+    background-color: var(--primary);
+}
+
+p {
+    font-size: 1rem;
+    line-height: 1.8rem;
+}
+
+.display {
+    font-family: 'Overpass', sans-serif;
+    color: var(--tertiary);
+    font-size: 2.625rem;
+    letter-spacing: 0.04em;
+    font-weight: 900;
+}
+
+h1 {
+    font-family: 'Overpass', sans-serif;
+    color: var(--tertiary);
+    font-size: 2rem;
+    letter-spacing: 0.2rem;
+    font-weight: 900;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.6s ease;
+    box-sizing: border-box;
+    z-index: 1000;
+}
+
+header ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header ul li {
+    position: relative;
+    list-style: none;
+}
+
+header ul li a {
+    position: relative;
+    margin: 0 5px;
+    text-decoration: none;
+    color: var(--secondary);
+    letter-spacing: 2px;
+    transition: 0.6s ease-in-out;
+    border-radius: 10px;
+}
+
+header a:hover {
+    background-color: var(--btn-primary);
+    color: var(--primary);
+    border-radius: 10px;
+    transition: 0.6s ease-in-out;
+}
+
+header.stick ul li a {
+    color: var(--secondary);
+    border-radius: 10px;
+    transition: 0.6s ease-in-out;
+}
+
+header.stick ul li a:hover {
+    color: var(--fonts-secondary);
+    transition: 0.6s ease-in-out;
+}
+
+.header {
+    background-color: transparent;
+    display: grid;
+    grid-template-areas:
+        "contact contact contact"
+        "logo nav nav";
+    justify-content: space-between;
+}
+
+.contact {
+    display: flex;
+    grid-area: contact;
+    background-color: var(--secondary);
+    justify-content: end;
+    padding: .5rem;
+    padding-right: 1rem;
+    color: var(--primary);
+    font-size: .7rem;
+}
+
+.lead {
+    font-size: .9rem;
+    color: var(--tertiary);
+    margin-bottom: 1rem;
+    letter-spacing: .17rem;
+    font-weight: 600;
+    margin-top: -1.2rem;
+}
+
+.logo {
+    grid-area: logo;
+    margin-left: 1rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    height: 100vh;
+    padding: 2rem;
+}
+
+.bg-content {
+    position: relative;
+    display: flex;
+    margin-right: 10vh;
+    max-width: 780px;
+    margin-top: 118px;
+    padding: 0rem;
+}
+
+.cover {
+    display: block;
+    width: 100%;
+}
+
+.content {
+    z-index: 900;
+    position: absolute;
+    left: 16%;
+    right: 55%;
+    top: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: var(--primary);
+    padding: 1rem;
+    -webkit-box-shadow: -5px 5px 8px -4px rgba(138, 138, 138, 1);
+    -moz-box-shadow: -5px 5px 8px -4px rgba(138, 138, 138, 1);
+    box-shadow: -5px 5px 8px -4px rgba(138, 138, 138, 1);
+    border-radius: .5rem;
+}
+
+.content-head {
+    display: flex;
+    flex-direction: column;
+}
+
+.stick {
+    background-color: var(--primary);
+    -webkit-box-shadow: 0px 9px 10px 2px rgba(62, 122, 107, 0.3);
+    box-shadow: 0px 9px 10px 2px rgba(62, 122, 107, 0.3);
+}
+
+#menu {
+    display: flex;
+    list-style: none;
+    width: 80%;
+    justify-content: right;
+    margin-right: 1rem;
+}
+
+#menu a {
+    display: block;
+    padding: .5rem;
+}
+
+#nav {
+    display: flex;
+    justify-content: right;
+    grid-area: nav;
+}
+
+.btn-agendar {
+    padding: .7rem 1.4rem .7rem 1.4rem;
+    font-size: .75rem;
+    letter-spacing: .5rem;
+    color: var(--fonts-secondary);
+    border-radius: .5rem;
+    margin-top: 1.5rem;
+    float: right;
+    cursor: pointer;
+    transition: 0.6s ease-in-out;
+    width: 40%;
+    background-color: #00886D;
+}
+
+.btn-agendar:hover {
+    transition: 0.6s ease-in-out;
+    background-color: var(--tertiary);
+}
+
+#btn-mobile {
+    display: none;
+}
+
+#story {
+    display: flex;
+    background-color: var(--bg-primary);
+    padding: 1rem 10vw 1rem 10vw;
+    align-items: center;
+    justify-content: center;
+}
+
+#story img {
+    display: flex;
+    max-width: 250px;
+    border-radius: .5rem;
+    -webkit-box-shadow: -5px 5px 8px -4px rgba(138, 138, 138, 1);
+    -moz-box-shadow: -5px 5px 8px -4px rgba(138, 138, 138, 1);
+    box-shadow: -5px 5px 8px -4px rgba(138, 138, 138, 1);
+}
+
+.story-text {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin-left: 3rem;
+    max-width: 40%;
+}
+
+#services {
+    display: flex;
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.services-text {
+    flex: 1;
+    margin-left: 15vw;
+    padding: 1rem;
+    max-width: 450px;
+}
+
+.services-cards {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    max-width: 640px;
+    gap: 1.5rem;
+    margin-top: 1rem;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 1.5rem;
+    box-shadow: 0 4px 30px var(--bg-alpha);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(247, 255, 247, 0.3);
+    transition: 0.6s ease-in-out;
+}
+
+.message {
+    background-color: var(--secondary);
+    color: var(--primary);
+    text-align: center;
+    font-size: 1.8rem;
+    padding: 1rem 20vw 1rem 20vw;
+}
+
+#instalations {
+    display: flex;
+    background-color: var(--bg-primary);
+    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.instalations-text {
+    flex: 1;
+    margin-left: 15vw;
+    padding: 1rem;
+    max-width: 450px;
+}
+
+.instalations-cards {
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    padding: 1rem;
+    max-width: 640px;
+    margin-top: 1rem;
+    background-color: aquamarine;
+}
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 1.65rem;
+    }
+
+    #menu {
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 120px;
+        right: 0px;
+        margin: auto;
+        background: var(--primary);
+        backdrop-filter: blur(8px);
+        transition: 0.6s;
+        z-index: 1000;
+        height: 0px;
+        visibility: hidden;
+        overflow-y: hidden;
+    }
+
+    #nav.active #menu {
+        height: calc(100vh - 80px);
+        visibility: visible;
+        overflow-y: auto;
+    }
+
+    #menu a {
+        padding: 1rem 0;
+        margin: 0 1rem;
+        border-bottom: 2px solid var(--bg-secondary);
+        border-radius: 0;
+    }
+
+    #btn-mobile {
+        display: flex;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        border: none;
+        background: none;
+        cursor: pointer;
+        gap: 0.5rem;
+        color: var(--secondary);
+    }
+
+    #menuBurger {
+        border-top: 2px solid;
+        width: 20px;
+    }
+
+    #menuBurger::after,
+    #menuBurger::before {
+        content: '';
+        display: block;
+        width: 20px;
+        height: 2px;
+        background: currentColor;
+        margin-top: 5px;
+        transition: 0.3s;
+        position: relative;
+    }
+
+    #nav.active #menuBurger {
+        border-top-color: transparent;
+    }
+
+    #nav.active #menuBurger::before {
+        transform: rotate(135deg);
+    }
+
+    #nav.active #menuBurger::after {
+        transform: rotate(-135deg);
+        top: -7px;
+    }
+
+    header a:hover {
+        border-radius: 0;
+    }
+
+    header.stick ul li a {
+        border-radius: 0;
+    }
+
+    header.stick #btn-mobile {
+        color: var(--secondary);
+    }
+
+    header.stick #menu {
+        background-color: var(--primary);
+    }
+
+    .main {
+        padding: 0;
+        max-height: 100vh;
+    }
+
+    .bg-content {
+        margin: auto;
+        max-height: calc(100vh - 125px);
+        margin-top: 125px;
+    }
+
+    .cover {
+        object-fit: cover;
+        height: calc(100vh - 125px);
+    }
+
+    .content {
+        position: absolute;
+        margin: auto;
+        left: 1rem;
+        right: 1rem;
+        justify-content: center;
+        margin-top: 125px;
+    }
+
+    .display {
+        font-size: 2rem;
+    }
+
+    .lead {
+        font-size: .8rem;
+        margin-top: -.1rem;
+    }
+
+    .btn-agendar {
+        width: 100%;
+    }
+
+    #story {
+        margin: 0;
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .story-text {
+        display: flex;
+        flex-direction: column;
+        padding: .1rem;
+        margin-left: .1rem;
+        margin-top: 1rem;
+        max-width: 100vw;
+    }
+
+    .story img {
+        max-width: 100%;
+    }
+
+    #services {
+        padding: 1rem;
+        flex-direction: column;
+    }
+
+    .services-text {
+        margin-left: 0;
+        padding: .1rem;
+    }
+
+    .services-cards {
+        padding: .1rem;
+        justify-content: space-between;
+    }
+
+    .message {
+
+        font-size: 1.6rem;
+        padding: 1rem 5vw 1rem 5vw;
+    }
+
+
 }
