--- a/source/css/main.css
+++ b/source/css/main.css
@@ -9,31 +9,28 @@
 
 :root {
     --primary: #F7FFF7;
-    --secondary: #3E7A6B;
+    --secondary: #00AA88;
+    --tertiary: #606C91;
 
     --bg-primary: #E7EEEC;
     --bg-secondary: #C9E3CA;
     --bg-alpha: rgba(34, 68, 59, 0.3);
 
-    --fonts-primary: #0F121A;
+    --fonts-primary: #1F6B74;
     --fonts-secondary: var(--primary);
     --h-color: var(--secondary);
     --btn-primary: var(--secondary);
     --btn-secondary: var(--primary);
 }
 
-
 a {
     text-decoration: none;
 }
-
-
 
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: var(--primary);
 }
-
 
 h1 {
     font-size: 2.625rem;
@@ -43,44 +40,27 @@ h1 {
 }
 
 h2 {
-    font-size: 2.375rem;
+    font-size: 2rem;
     line-height: 120%;
-    letter-spacing: 0.04em;
+    letter-spacing: 0.1em;
     font-weight: 600;
-    font-family: 'Montserrat', sans-serif;
-    color: var(--secondary);
+    color: var(--fonts-primary);
     margin-bottom: 1rem;
 }
 
-h3 {
-    font-weight: 400;
-    line-height: 120%;
+.display {
+    color: var(--primary);
+    font-size: 2.625rem;
     letter-spacing: 0.04em;
     font-weight: 900;
 }
 
-h4 {
-    font-size: 1.5rem;
-    line-height: 120%;
-    letter-spacing: 0.04em;
-    font-weight: 900;
-}
+.lead {
+    font-size: 1.1rem;
+    color: var(--primary);
+    letter-spacing: .17rem;
+    font-weight: 600;
 
-h5 {
-    font-size: 1.5rem;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-    font-family: 'Robot', sans-serif;
-    font-weight: 100;
-    margin-bottom: 1rem;
-}
-
-h6 {
-    font-size: 1.375rem;
-    line-height: 120%;
-    letter-spacing: 0.02em;
-    font-weight: 300;
-    font-family: 'Montserrat', sans-serif;
 }
 
 p {
@@ -88,10 +68,6 @@ p {
     color: var(--fonts-primary);
 }
 
-.lead {
-    font-size: 1.125;
-    font-weight: 600;
-}
 
 .btn-agendar {
     background-color: var(--btn-primary);
@@ -122,11 +98,10 @@ header {
     justify-content: space-between;
     align-items: center;
     transition: 0.6s ease;
-    box-sizing: border-box;
     z-index: 1000;
     background-image: url('../../assets/images/cooperdog-branco.png');
-    background-position: left center;
-    background-size: 120px 120px;
+    background-position: left 2rem;
+    background-size: 100px 100px;
     background-repeat: no-repeat;
 }
 
@@ -159,7 +134,7 @@ header a:hover {
 }
 
 header.stick ul li a {
-    color: var(--secondary);
+    color: var(--fonts-primary);
     border-radius: 10px;
     transition: 0.6s ease-in-out;
 }
@@ -171,35 +146,59 @@ header.stick ul li a:hover {
 
 .header {
     background-color: transparent;
+    display: grid;
+    grid-template-areas:
+        "contact contact contact"
+        "logo nav nav";
+    justify-content: space-between;
+}
+
+.contact {
+    display: flex;
+    grid-area: contact;
+    background-color: var(--secondary);
+    justify-content: end;
+    padding: .5rem;
+    padding-right: 1rem;
+    color: var(--primary);
+    font-size: .7rem;
+}
+
+.logo {
+    grid-area: logo;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 100px;
+    height: 100px;
 }
 
 .stick {
     background-color: var(--primary);
     background-image: url('../../assets/images/cooperdog.png');
-    background-position: left center;
-    background-size: 120px 120px;
+    background-position: left 2rem;
+    background-size: 100px 100px;
     background-repeat: no-repeat;
     -webkit-box-shadow: 0px 9px 10px 2px rgba(62, 122, 107, 0.3);
     box-shadow: 0px 9px 10px 2px rgba(62, 122, 107, 0.3);
 }
 
-.logo {
-
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 120px;
-    height: 120px;
-}
-
 #menu {
     display: flex;
     list-style: none;
-    gap: .5rem;
+    width: 80%;
+    justify-content: right;
+    margin-right: 1rem;
 }
 
 #menu a {
     display: block;
     padding: .5rem;
+}
+
+#nav {
+    display: flex;
+    justify-content: right;
+    grid-area: nav;
 }
 
 #btn-mobile {
@@ -215,6 +214,11 @@ header.stick ul li a:hover {
     display: flex;
     align-items: center;
     padding: 1rem;
+}
+
+.main-head {
+    display: flex;
+    flex-direction: column;
 }
 
 .main-info {
@@ -241,75 +245,63 @@ header.stick ul li a:hover {
 }
 
 .story {
-    margin-top: 1.5rem;
     display: flex;
-    flex-wrap: wrap;
+    background-color: var(--bg-primary);
+    padding: 1rem 10vw 1rem 10vw;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
 }
 
 .story-text {
+    display: flex;
+    flex-direction: column;
     padding: 1rem;
+    margin-left: 3rem;
     max-width: 450px;
 }
 
 .story-image img {
     display: block;
     border-radius: 30px;
-    max-width: 350px;
-    max-height: 350px;
+    max-width: 300px;
+    max-height: 300px;
     width: auto;
     height: auto;
 }
 
 .services {
-    background-color: var(--bg-secondary);
-    margin-top: 1rem;
     display: flex;
     flex-wrap: wrap;
+    padding: 1rem;
     align-items: center;
     justify-content: center;
 }
 
 
-.services-description {
+.services-text {
     flex: 1;
     margin-left: 15vw;
     padding: 1rem;
     max-width: 450px;
 }
 
-.services-text {
-    margin-left: 2vw;
-}
-
 .services-cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    flex: 1;
-    padding: 20px;
-    gap: 1.5rem;
-    min-width: 500px;
-    margin-right: 5vw;
-}
-
-.services-cards-card img {
-    width: 100%;
-    height: 100px;
-    display: block;
-    border-radius: 20px 20px 0 0;
-}
-
-.services-cards-card {
-    height: 150px;
-    width: 150px;
-    color: var(--secondary);
     display: flex;
+    flex-wrap: wrap;
+    padding: 1rem;
+    max-width: 640px;
+    gap: 1.5rem;
+    margin-top: 1rem;
+}
+
+.item {
+    display: flex;
+    color: var(--fonts-primary);
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    background: transparent;
+    text-align: center;
+    width: 150px;
+    height: 150px;
     border-radius: 1.5rem;
     box-shadow: 0 4px 30px var(--bg-alpha);
     backdrop-filter: blur(5px);
@@ -318,41 +310,12 @@ header.stick ul li a:hover {
     transition: 0.6s ease-in-out;
 }
 
-.services-cards-card:hover {
-    transition: 0.6s ease-in-out;
-    background-color: var(--bg-primary);
-    cursor: pointer;
-
-
-}
-
-
-.services-cards-details {
-    display: flex;
-    padding: 20px 10px;
-    justify-content: space-between;
-    border-radius: 20px 20px 0 0;
-}
-
-.services-cards-details>p {
-    font-size: .9rem;
-    line-height: 1.6rem;
-    font-weight: 400;
-}
-
 .message {
-    min-height: 12vh;
-    font-size: 1.5rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1.5rem;
-    color: var(--secondary);
-    margin-top: 1.5rem;
+    background-color: var(--secondary);
+    color: var(--primary);
     text-align: center;
-    margin-left: 0vw;
-    margin-right: 0vw;
+    font-size: 1.6rem;
+    padding: 2rem 15vw 2rem 15vw;
 }
 
 .installations {
@@ -469,7 +432,6 @@ header.stick ul li a:hover {
         height: 0px;
         visibility: hidden;
         overflow-y: hidden;
-
     }
 
     #nav.active #menu {
@@ -628,47 +590,43 @@ header.stick ul li a:hover {
 
 }
 
-.color-1 {
-    color: #3E4D7A;
+
+
+
+.services-ul ul {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.color-2 {
-    background-color: #FDF2FC;
-
-    margin: 0;
-    padding: 1rem;
+.services-ul ul li {
+    position: relative;
+    list-style: none;
 }
 
-.color-3 {
-    background-color: #FFD6E6;
+.services-ul ul li a {
+    position: relative;
+    margin: 0 5px;
+    text-decoration: none;
+    color: var(--primary);
+    letter-spacing: 2px;
+    transition: 0.6s ease-in-out;
+    border-radius: 10px;
 }
 
-.color-4 {
-    background-color: #C3D8EA;
+.services-ul a:hover {
+    background-color: var(--btn-primary);
+    border-radius: 10px;
+    transition: 0.6s ease-in-out;
 }
 
-.color-5 {
-    background-color: #F7FFF7;
-}
-
-.color-6 {
-    background-color: #DBC5E7;
-}
-
-.color-7 {
-    background-color: #FDF9D8;
-}
-
-.color-8 {
-    background-color: #B3E5CB;
-}
-
-.color-9 {
-    background-color: #F1ECF3;
-}
-
-.color-10 {
-    background-color: #F0F5FA;
-    margin: 0;
+.daycare {
+    position: relative;
+    height: 20vh;
+    background: linear-gradient(to bottom, rgba(34, 78, 67, .9), rgba(46, 139, 86, .7)),
+        url("../../assets/images/dogsCapa.jpeg");
+    display: flex;
+    align-items: center;
     padding: 1rem;
 }
