--- a/source/css/main.css
+++ b/source/css/main.css
@@ -60,7 +60,6 @@ h2 {
     color: var(--primary);
     letter-spacing: .17rem;
     font-weight: 600;
-
 }
 
 p {
@@ -404,6 +403,17 @@ header.stick ul li a:hover {
 }
 
 @media (max-width: 600px) {
+    h2 {
+        font-size: 1.65rem;
+    }
+
+    .display {
+        font-size: 1.8rem;
+    }
+
+    .lead {
+        font-size: 1rem;
+    }
 
     .main {
         height: 100vh;
@@ -508,16 +518,25 @@ header.stick ul li a:hover {
 
     header.stick #btn-mobile {
         color: var(--secondary);
-
     }
-
 
     header.stick #menu {
         background-color: var(--primary);
     }
 
     .story {
-        gap: 1rem;
+        margin: 0;
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .story-text {
+        display: flex;
+        flex-direction: column;
+        padding: .1rem;
+        margin-left: .1rem;
+        margin-top: 1rem;
+        max-width: 100vw;
     }
 
     .story-image img {
@@ -527,26 +546,23 @@ header.stick ul li a:hover {
     }
 
     .services {
-        display: grid;
+        padding: 1rem;
+        flex-direction: column;
     }
 
-    .services-description {
-        flex: 1;
+    .services-text {
         margin-left: 0;
-    }
-
-    .services h5 {
-        padding-left: 1rem;
+        padding: .1rem;
     }
 
     .services-cards {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-        min-width: 150px;
-        max-width: 100vw;
-        margin: auto;
-        padding: .5rem;
-        gap: 1.5rem;
+        padding: .1rem;
+        justify-content: space-between;
+    }
+
+    .item {
+        width: 125px;
+        height: 125px;
     }
 
     .btn-agendar {
@@ -554,16 +570,17 @@ header.stick ul li a:hover {
     }
 
     .message {
-        margin-left: .5vw;
-        margin-right: .5vw;
-        box-sizing: border-box;
+        font-size: 1.6rem;
+        padding: 1rem 5vw 1rem 5vw;
+
     }
 
     .installations {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
         grid-auto-rows: 150px;
-        padding: 1rem;
+        padding: 1rem 5vw 1rem 5vw;
+        margin-top: 0;
     }
 
     .iframe {
